tests/negative_pomidory/last_orphan_obj.pomidor
@url home_page

@url home_page
!!Comment
When I click on the #practice_menu_button I get #tomato :)